@startuml

namespace al5d_cpp {

    class CommunicatorBase <<(I,SkyBlue)>> {
        + transmit(message : String) : void
        + is_ready() : Boolean
    }

    class AL5DBase {
        + AL5DBase(al5d_base_config)
        + move_to_degree(joint_name, degree, move_duration) : void
        + move_to_degree(joint_type, degree, move_duration) : void
        + move_to_degree(joint_name, degree) : void
        + move_to_degree(joint_type, degree) : void
        + move_to_degrees(joint_name_degrees, move_duration) : void
        + move_to_degrees(joint_type_degrees, move_duration) : void
        + move_to_degrees(joint_name_degrees) : void
        + move_to_degrees(joint_type_degrees) : void
        + stop() : void
        + is_ready() : Boolean
        - move_to_degree__(joint, degree, move_duration) : void
        - move_to_degree__(joint, degree) : void
        - transmit__(message) : void
        # joints__ : JointBases
        # communicator_ptr__ : CommunicatorBasePtr
    }

    class JointBase {
        + JointBase(joint_base_config)
        + move_to_degree(joint_name, degree,move_duration) : void
        + move_to_degree(joint_type, degree, move_duration) : void
        + move_to_degree(joint_name, degree) : void
        + move_to_degree(joint_type, degree) : void
        + move_to_degrees(joint_name_degrees, move_duration) : void
        + move_to_degrees(joint_type_degrees,move_duration) : void
        + move_to_degrees(joint_name_degrees) : void
        + move_to_degrees(joint_type_degrees) : void
        + stop() : void
        + is_ready() : Boolean
        - transmit_degree__(degree : Degree) : void
        - transmit_move_duration__(duration : Duration) : void
        - transmit__(message : String) : void
        - to_pulse_width__(degree : Degree) : PulseWidth
        - name : String
        - type : JointType
        - board_channel : BoardChannel
        - degree_range : DegreeRange
        - pulse_width_range : PulseWidthRange
        - convert_ratio : Double
        - communicator_ptr : CommunicatorBasePtr
    }

    class JointBaseConfig <<(S,Orchid)>> #eee
    class AL5DBaseConfig <<(S,Orchid)>> #eee

    CommunicatorBase "1" <- "*" JointBase
    CommunicatorBase "1" <-- "*" AL5DBase
    AL5DBase "1" -> "6" JointBase
    AL5DBase ..> AL5DBaseConfig
    JointBase ..> JointBaseConfig
}

legend right
  <b><color:Orchid>S Struct</color></b>
  <b><color:DarkCyan>C Class</color></b>
  <b><color:SkyBlue>I Interface</color></b>
endlegend

@enduml
